--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,12 +28,29 @@ services:
     ports:
       - 8080:80
     volumes:
-      - ./qgis_projects:/etc/qgisserver
+      - syncthing_data:/etc/qgisserver
     environment:
       - QGIS_SERVER_LANDING_PAGE_PROJECTS_DIRECTORIES=/etc/qgisserver
     depends_on:
       - postgres
 
+  syncthing:
+    image: syncthing/syncthing
+    container_name: syncthing
+    hostname: localhost
+    environment:
+      - PUID=1000
+      - PGID=1000
+    volumes:
+      - syncthing_data:/var/syncthing
+    ports:
+      - 8384:8384 # Web UI
+      - 22000:22000/tcp # TCP file transfers
+      - 22000:22000/udp # QUIC file transfers
+      - 21027:21027/udp # Receive local discovery broadcasts
+    restart: unless-stopped
+
 volumes:
   postgres_data:
   pgadmin_data:
+  syncthing_data:
